fixing error white space

--- a/app/assets/stylesheets/pages/deal.scss
+++ b/app/assets/stylesheets/pages/deal.scss
@@ -127,6 +127,9 @@
                     .description {
                         color: $secondary-font-color;
                     }
+                    .error-tooltip {
+                        white-space: normal;
+                    }
                 }
             }
             .error-tooltip {
